--- a/WebComponents.html
+++ b/WebComponents.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>first Web Component</title>
+  <title>Custom Elements avec Web Components</title>
 </head>
 
 <body>
   <center>
     <my-button label="Push ME"></my-button>
-    <my-button label="Second"></my-button>
   </center>
   <script>
     const template = document.createElement('template');
